# ina219-icm20948

hello_world_1/: CMakeLists.txt  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
hello_world_1/src/: icm20948_zephyr.c  main.c
